--- a/html/css/app.css
+++ b/html/css/app.css
@@ -25,14 +25,16 @@ ul li {
 
 h1, h2, h3, h4, h5, h6, p, label, a, span {
   color: #272727;
-  font-family: Open Sans;
-  font-weight: 300; }
+  font-family: Lato;
+  font-weight: 400; }
 
 .button {
   background-color: #32aebd;
   color: white;
   margin: 0;
-  padding: 15px 40px; }
+  padding: 15px 40px;
+  text-transform: uppercase;
+  letter-spacing: 1.1px; }
 
 /* -----------------------------------------
    General Styles
@@ -59,16 +61,18 @@ h1, h2, h3, h4, h5, h6, p, label, a, span {
 
 header {
   background-color: white;
-  height: 90px;
-  padding-top: 10px;
+  min-height: 90px;
+  padding-top: 15px;
   width: 100%; }
   header img {
-    width: 60px; }
+    width: 170px; }
   header nav {
-    padding-top: 20px; }
+    padding-top: 20px;
+    float: right; }
     header nav a {
       color: #293c4e;
       font-size: 16px;
+      font-weight: 400;
       margin-left: 50px;
       text-transform: uppercase; }
 
@@ -77,7 +81,23 @@ main {
 
 footer {
   background-color: #293c4e;
-  min-height: 80px; }
+  border-top: 5px solid #32aebd;
+  color: #f7f7f7; }
+  footer #copyright #social {
+    text-align: right; }
+  footer #copyright #logo {
+    text-align: center; }
+  footer #copyright #link {
+    text-align: left;
+    font-size: 0.8em;
+    text-transform: lowercase; }
+  footer #testimonial {
+    font-style: italic;
+    padding-bottom: 30px; }
+    footer #testimonial img {
+      float: left; }
+    footer #testimonial #author {
+      color: #32aebd; }
 
 /* -----------------------------------------
    Frontpage Styles
@@ -102,8 +122,8 @@ footer {
 #main-user-number {
   border-top: 5px solid #32aebd;
   border-bottom: 5px solid #32aebd;
-  height: 100px;
   padding-top: 13px;
+  padding-bottom: 13px;
   text-align: center; }
   #main-user-number h2 {
     color: white;
