--- a/html/css/app.css
+++ b/html/css/app.css
@@ -69,7 +69,7 @@ a:hover {
   margin-top: 30px; }
 
 .padding-bottom {
-  margin-top: 30px; }
+  margin-bottom: 30px; }
 
 .secondary-bg {
   background-color: #293c4e; }
