--- a/html/css/app.css
+++ b/html/css/app.css
@@ -13,27 +13,34 @@
 /* -----------------------------------------
    Shared Properties
 ----------------------------------------- */
+/* line 35, ../scss/app.scss */
 .end {
   clear: both; }
 
 /*Global Variables*/
+/* line 63, ../scss/app.scss */
 html, body {
   background-color: #f7f7f7; }
 
+/* line 68, ../scss/app.scss */
 ul li {
   list-style: none; }
 
+/* line 70, ../scss/app.scss */
 h1, h2, h3, h4, h5, h6, p, label, a, span {
   color: #272727;
   font-family: Lato;
   font-weight: 400; }
 
+/* line 76, ../scss/app.scss */
 p {
   text-align: justify; }
 
+/* line 80, ../scss/app.scss */
 a:hover {
   color: #32aebd; }
 
+/* line 84, ../scss/app.scss */
 button {
   background-color: #32aebd;
   color: white;
@@ -48,127 +55,207 @@ button {
 /* -----------------------------------------
    General Styles
 ----------------------------------------- */
+/* line 105, ../scss/app.scss */
 .orange-font {
   color: #ff6c60; }
 
+/* line 109, ../scss/app.scss */
+.green-font {
+  color: #37d074; }
+
+/* line 113, ../scss/app.scss */
+.dark-bg {
+  background-color: #293c4e;
+  color: white; }
+
+/* line 118, ../scss/app.scss */
+.green-bg {
+  background-color: #37d074;
+  color: white; }
+
+/* line 123, ../scss/app.scss */
+.red-bg {
+  background-color: #e85458;
+  color: white; }
+
+/* line 128, ../scss/app.scss */
+.orange-bg {
+  background-color: #ff6c60;
+  color: white; }
+
+/* line 133, ../scss/app.scss */
+.yellow-bg {
+  background-color: #e8cb59;
+  color: white; }
+
+/* line 138, ../scss/app.scss */
+.red-border {
+  border-top: 4px solid #e85458; }
+
+/* line 142, ../scss/app.scss */
+.green-border {
+  border-top: 4px solid #37d074; }
+
+/* line 146, ../scss/app.scss */
+.orange-border {
+  border-top: 4px solid #ff6c60; }
+
+/* line 150, ../scss/app.scss */
+.yellow-border {
+  border-top: 4px solid #e8cb59; }
+
+/* line 154, ../scss/app.scss */
 .primary-color-font {
   color: #32aebd; }
 
+/* line 158, ../scss/app.scss */
 .full-padding {
   padding-top: 60px;
   padding-bottom: 60px; }
 
+/* line 163, ../scss/app.scss */
 .half-padding {
   padding-top: 30px;
   padding-bottom: 30px; }
 
+/* line 168, ../scss/app.scss */
 .half-margin {
   margin-top: 30px;
   margin-bottom: 30px; }
 
+/* line 173, ../scss/app.scss */
 .margin-top {
   margin-top: 60px; }
 
+/* line 177, ../scss/app.scss */
 .padding-top {
   margin-top: 30px; }
 
+/* line 181, ../scss/app.scss */
 .padding-bottom {
   margin-bottom: 30px; }
 
+/* line 185, ../scss/app.scss */
 .secondary-bg {
   background-color: #293c4e; }
 
+/* line 189, ../scss/app.scss */
 header {
   background-color: white;
   min-height: 90px;
   padding-top: 15px;
   width: 100%; }
+  /* line 195, ../scss/app.scss */
   header img {
     width: 170px; }
+  /* line 199, ../scss/app.scss */
   header nav {
     padding-top: 20px;
     float: right; }
+    /* line 203, ../scss/app.scss */
     header nav a {
       color: #293c4e;
       font-size: 16px;
       font-weight: 400;
       margin-left: 50px;
       text-transform: uppercase; }
+    /* line 211, ../scss/app.scss */
     header nav #login {
       color: #ff6c60; }
 
+/* line 219, ../scss/app.scss */
 main {
   width: 100%; }
 
+/* line 223, ../scss/app.scss */
 footer {
   background-color: #293c4e;
   border-top: 5px solid #32aebd;
   color: #f7f7f7;
   text-align: center; }
+  /* line 229, ../scss/app.scss */
   footer img {
     width: 70px; }
+  /* line 234, ../scss/app.scss */
   footer #social {
     margin-top: 35px;
     text-transform: lowercase; }
+  /* line 240, ../scss/app.scss */
   footer #link {
     margin-top: 35px;
     text-transform: lowercase;
     padding-bottom: 20px; }
+  /* line 247, ../scss/app.scss */
   footer a {
     margin-left: 20px;
     color: #f7f7f7; }
+  /* line 252, ../scss/app.scss */
   footer span {
     color: #f7f7f7;
     padding-top: 20px; }
+  /* line 257, ../scss/app.scss */
   footer #copyright {
     font-size: 0.8em;
     margin-top: 15px;
     text-transform: lowercase; }
+  /* line 263, ../scss/app.scss */
   footer #testimonial {
     font-style: italic;
     padding-top: 20px; }
+    /* line 267, ../scss/app.scss */
     footer #testimonial img {
       float: left; }
+    /* line 271, ../scss/app.scss */
     footer #testimonial #author {
       color: #32aebd; }
 
 /* -----------------------------------------
    Frontpage Styles
 ----------------------------------------- */
+/* line 281, ../scss/app.scss */
 .main-slider {
   background-color: #293c4e;
   border-top: 5px solid #32aebd;
   border-bottom: 5px solid #32aebd;
   padding-top: 20px;
   padding-bottom: 20px; }
+  /* line 289, ../scss/app.scss */
   .main-slider h2 {
     color: #32aebd;
     padding-bottom: 20px;
     text-align: center;
     font-weight: 300; }
+  /* line 296, ../scss/app.scss */
   .main-slider p {
     color: #f7f7f7; }
+  /* line 301, ../scss/app.scss */
   .main-slider ul {
     padding-left: 20px;
     color: #32aebd; }
+    /* line 305, ../scss/app.scss */
     .main-slider ul li {
       list-style: disc; }
+      /* line 307, ../scss/app.scss */
       .main-slider ul li span {
         color: #f7f7f7; }
 
+/* line 315, ../scss/app.scss */
 #main-services h4 {
   color: #32aebd;
   font-weight: 500; }
 
+/* line 322, ../scss/app.scss */
 #main-user-number {
   border-top: 5px solid #32aebd;
   border-bottom: 5px solid #32aebd;
   padding-top: 13px;
   padding-bottom: 13px;
   text-align: center; }
+  /* line 329, ../scss/app.scss */
   #main-user-number h2 {
     color: white;
     line-height: 1; }
+  /* line 334, ../scss/app.scss */
   #main-user-number h5 {
     color: white;
     font-weight: 300;
@@ -177,28 +264,36 @@ footer {
 /* -----------------------------------------
    Login Styles
 ----------------------------------------- */
+/* line 345, ../scss/app.scss */
 #login {
   width: 300px; }
+  /* line 348, ../scss/app.scss */
   #login img {
     width: 120px; }
+  /* line 352, ../scss/app.scss */
   #login h1 {
     font-weight: 300;
     text-transform: uppercase;
     color: #565656; }
+  /* line 358, ../scss/app.scss */
   #login #loginbutton {
-    width: 100%;
     background-color: #32aebd;
     text-transform: uppercase; }
+  /* line 363, ../scss/app.scss */
   #login #loginlinks {
     text-transform: lowercase;
     font-size: 0.9em;
     padding-top: 10px; }
+    /* line 368, ../scss/app.scss */
     #login #loginlinks a {
       color: #565656; }
+    /* line 372, ../scss/app.scss */
     #login #loginlinks #helplink {
       float: left; }
+    /* line 376, ../scss/app.scss */
     #login #loginlinks #reglink {
       float: right; }
+  /* line 382, ../scss/app.scss */
   #login input[type=text],
   #login input[type=password] {
     padding: 10px;
@@ -209,6 +304,7 @@ footer {
     color: #565656;
     letter-spacing: 2px;
     text-transform: uppercase; }
+  /* line 395, ../scss/app.scss */
   #login input[type=text]:focus,
   #login input[type=password]:focus {
     color: #32aebd;
@@ -221,65 +317,78 @@ footer {
 /* -----------------------------------------
    Compare Styles
 ----------------------------------------- */
+/* line 411, ../scss/app.scss */
 .container {
   max-width: 800px;
   margin: 0px auto; }
 
+/* line 416, ../scss/app.scss */
 .box {
-  width: 400px; }
-  .box .icon,
+  font-weight: 300; }
+  /* line 418, ../scss/app.scss */
   .box .text,
   .box .value {
     float: left;
     padding: 15px; }
-  .box .icon {
-    color: white;
-    background-color: #32aebd;
-    padding: 39px 20px; }
+  /* line 424, ../scss/app.scss */
   .box .text {
-    color: white;
-    background-color: #293c4e; }
+    border-left: 5px solid #32aebd; }
+  /* line 428, ../scss/app.scss */
   .box .value {
-    background-color: white;
-    color: #293c4e; }
+    background-color: white; }
 
-.statistic {
-  float: right; }
-
-.item {
-  background-color: #293c4e;
-  border-top: 4px solid #32aebd;
-  color: white; }
-  .item .rating,
-  .item .name,
-  .item .price,
-  .item .marker {
+/* line 434, ../scss/app.scss */
+.sort {
+  margin-bottom: 30px; }
+  /* line 436, ../scss/app.scss */
+  .sort .sortbuttons {
+    background-color: #afafaf;
     padding: 10px 20px; }
-  .item .rating {
-    background-color: #32aebd;
-    text-align: center;
-    font-weight: bold; }
-  .item .name {
-    text-transform: uppercase; }
-  .item .price {
-    text-align: right;
-    color: #32aebd; }
-  .item .marker {
-    text-align: right; }
+    /* line 439, ../scss/app.scss */
+    .sort .sortbuttons a {
+      color: white; }
+  /* line 444, ../scss/app.scss */
+  .sort :hover {
+    background-color: #565656; }
 
+/* line 450, ../scss/app.scss */
+.item .rating,
+.item .name,
+.item .price,
+.item .marker {
+  padding: 10px 20px; }
+/* line 457, ../scss/app.scss */
+.item .rating {
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: 2px;
+  font-size: 1.3em; }
+/* line 464, ../scss/app.scss */
+.item .name {
+  text-transform: uppercase;
+  font-weight: 300; }
+/* line 469, ../scss/app.scss */
+.item .price {
+  text-align: right;
+  color: #32aebd; }
+/* line 474, ../scss/app.scss */
+.item .marker {
+  text-align: right; }
+
+/* line 479, ../scss/app.scss */
 .collapsed {
   background-color: white;
   color: #293c4e;
   padding: 20px;
   margin-bottom: 60px;
   border-bottom: 5px solid #32aebd; }
+  /* line 486, ../scss/app.scss */
   .collapsed .buttons {
     position: absolute;
     padding-top: 25px;
     margin-left: -35px; }
+  /* line 492, ../scss/app.scss */
   .collapsed button {
     font-size: 12px;
     width: 120px;
     padding: 10px 10px; }
-  .collapsed .green {
-    background-color: #37d074; }
