--- a/html/css/app.css
+++ b/html/css/app.css
@@ -153,57 +153,57 @@ header {
     header .top-bar img {
       padding-top: 8px; }
 
-/* line 207, ../scss/app.scss */
+/* line 206, ../scss/app.scss */
 main {
   width: 100%; }
 
-/* line 211, ../scss/app.scss */
+/* line 210, ../scss/app.scss */
 footer {
   background-color: #293c4e;
   border-top: 5px solid #32aebd;
   color: #f7f7f7;
   text-align: center; }
-  /* line 217, ../scss/app.scss */
+  /* line 216, ../scss/app.scss */
   footer img {
     width: 70px; }
-  /* line 222, ../scss/app.scss */
+  /* line 221, ../scss/app.scss */
   footer #social {
     margin-top: 35px;
     text-transform: lowercase; }
-  /* line 228, ../scss/app.scss */
+  /* line 227, ../scss/app.scss */
   footer #link {
     margin-top: 35px;
     text-transform: lowercase;
     padding-bottom: 20px; }
-  /* line 235, ../scss/app.scss */
+  /* line 234, ../scss/app.scss */
   footer a {
     margin-left: 20px;
     color: #f7f7f7; }
-  /* line 240, ../scss/app.scss */
+  /* line 239, ../scss/app.scss */
   footer span {
     color: #f7f7f7;
     padding-top: 20px; }
-  /* line 245, ../scss/app.scss */
+  /* line 244, ../scss/app.scss */
   footer #copyright {
     font-size: 0.8em;
     margin-top: 15px;
     text-transform: lowercase; }
-  /* line 251, ../scss/app.scss */
+  /* line 250, ../scss/app.scss */
   footer #testimonial {
     font-style: italic;
     font-weight: 300;
     padding-top: 20px; }
-    /* line 256, ../scss/app.scss */
+    /* line 255, ../scss/app.scss */
     footer #testimonial img {
       float: left; }
-    /* line 260, ../scss/app.scss */
+    /* line 259, ../scss/app.scss */
     footer #testimonial #author {
       color: #32aebd; }
 
 /* -----------------------------------------
    Frontpage Styles
 ----------------------------------------- */
-/* line 270, ../scss/app.scss */
+/* line 269, ../scss/app.scss */
 #headline {
   margin-top: 50px;
   font-size: 2.3em;
@@ -212,7 +212,7 @@ footer {
   letter-spacing: 1.1px;
   color: #ff6c60; }
 
-/* line 279, ../scss/app.scss */
+/* line 278, ../scss/app.scss */
 .subline {
   padding-top: 20px;
   font-size: 1.7em;
@@ -220,62 +220,62 @@ footer {
   letter-spacing: 1.1px;
   font-style: italic; }
 
-/* line 287, ../scss/app.scss */
+/* line 286, ../scss/app.scss */
 .main-slider {
   background-color: #293c4e;
   border-top: 5px solid #32aebd;
   border-bottom: 5px solid #32aebd;
   padding-top: 20px;
   padding-bottom: 10px; }
-  /* line 295, ../scss/app.scss */
+  /* line 294, ../scss/app.scss */
   .main-slider h2 {
     color: #32aebd;
     padding-bottom: 20px;
     text-align: center;
     font-weight: 200; }
-  /* line 302, ../scss/app.scss */
+  /* line 301, ../scss/app.scss */
   .main-slider p {
     color: #f7f7f7;
     font-weight: 300; }
-  /* line 307, ../scss/app.scss */
+  /* line 306, ../scss/app.scss */
   .main-slider #bullethead {
     color: #ff6c60;
     font-size: 1.2em;
     font-weight: 300; }
-  /* line 313, ../scss/app.scss */
+  /* line 312, ../scss/app.scss */
   .main-slider ul {
     padding-left: 20px;
     color: #32aebd; }
-    /* line 318, ../scss/app.scss */
+    /* line 317, ../scss/app.scss */
     .main-slider ul li {
       list-style: disc; }
-      /* line 321, ../scss/app.scss */
+      /* line 320, ../scss/app.scss */
       .main-slider ul li span {
         color: #f7f7f7;
         font-weight: 300; }
 
-/* line 330, ../scss/app.scss */
+/* line 329, ../scss/app.scss */
 #main-services h4 {
   color: #32aebd;
-  font-weight: 500; }
-/* line 335, ../scss/app.scss */
+  font-weight: 300; }
+/* line 334, ../scss/app.scss */
 #main-services h3 {
   color: #ff6c60;
   font-weight: 300;
   font-style: italic; }
 
-/* line 343, ../scss/app.scss */
+/* line 342, ../scss/app.scss */
 #main-user-number {
   border-top: 5px solid #32aebd;
   border-bottom: 5px solid #32aebd;
   padding: 8px 0px;
   text-align: center; }
-  /* line 349, ../scss/app.scss */
+  /* line 348, ../scss/app.scss */
   #main-user-number h2 {
     color: white;
     line-height: 1;
     font-size: 1.5em; }
-  /* line 355, ../scss/app.scss */
+  /* line 354, ../scss/app.scss */
   #main-user-number h5 {
     color: white;
     font-weight: 300;
@@ -285,29 +285,29 @@ footer {
 /* -----------------------------------------
    Login Styles
 ----------------------------------------- */
-/* line 367, ../scss/app.scss */
+/* line 366, ../scss/app.scss */
 #login {
   width: 300px; }
-  /* line 370, ../scss/app.scss */
+  /* line 369, ../scss/app.scss */
   #login h1 {
     font-weight: 300;
     text-transform: uppercase;
     color: #565656; }
-  /* line 376, ../scss/app.scss */
+  /* line 375, ../scss/app.scss */
   #login #loginlinks {
     text-transform: lowercase;
     font-size: 0.9em;
     padding-top: 10px; }
-    /* line 381, ../scss/app.scss */
+    /* line 380, ../scss/app.scss */
     #login #loginlinks a {
       color: #565656; }
-    /* line 385, ../scss/app.scss */
+    /* line 384, ../scss/app.scss */
     #login #loginlinks #helplink {
       float: left; }
-    /* line 389, ../scss/app.scss */
+    /* line 388, ../scss/app.scss */
     #login #loginlinks #reglink {
       float: right; }
-  /* line 395, ../scss/app.scss */
+  /* line 394, ../scss/app.scss */
   #login input[type=text],
   #login input[type=password] {
     padding: 10px;
@@ -318,7 +318,7 @@ footer {
     color: #565656;
     letter-spacing: 2px;
     text-transform: uppercase; }
-  /* line 408, ../scss/app.scss */
+  /* line 407, ../scss/app.scss */
   #login input[type=text]:focus,
   #login input[type=password]:focus {
     color: #32aebd;
@@ -331,78 +331,113 @@ footer {
 /* -----------------------------------------
    Compare Styles
 ----------------------------------------- */
-/* line 424, ../scss/app.scss */
+/* line 423, ../scss/app.scss */
 .container {
   max-width: 800px;
   margin: 0px auto; }
 
-/* line 429, ../scss/app.scss */
+/* line 428, ../scss/app.scss */
 .box {
   font-weight: 300; }
-  /* line 431, ../scss/app.scss */
+  /* line 430, ../scss/app.scss */
   .box .text,
   .box .value {
     float: left;
     padding: 15px; }
-  /* line 437, ../scss/app.scss */
+  /* line 436, ../scss/app.scss */
   .box .text {
     border-left: 5px solid #32aebd; }
-  /* line 441, ../scss/app.scss */
+  /* line 440, ../scss/app.scss */
   .box .value {
     background-color: white; }
 
-/* line 447, ../scss/app.scss */
+/* line 446, ../scss/app.scss */
 .sort {
   margin-bottom: 30px; }
-  /* line 449, ../scss/app.scss */
+  /* line 448, ../scss/app.scss */
   .sort .sortbuttons {
     background-color: #afafaf;
     padding: 10px 20px; }
-    /* line 452, ../scss/app.scss */
+    /* line 451, ../scss/app.scss */
     .sort .sortbuttons a {
       color: white; }
-  /* line 457, ../scss/app.scss */
+  /* line 456, ../scss/app.scss */
   .sort :hover {
     background-color: #565656; }
 
-/* line 463, ../scss/app.scss */
+/* line 462, ../scss/app.scss */
 .item .rating,
 .item .name,
 .item .price,
 .item .marker {
   padding: 10px 20px; }
-/* line 470, ../scss/app.scss */
+/* line 469, ../scss/app.scss */
 .item .rating {
   text-align: center;
   font-weight: bold;
   letter-spacing: 2px;
   font-size: 1.3em; }
-/* line 477, ../scss/app.scss */
+/* line 476, ../scss/app.scss */
 .item .name {
   text-transform: uppercase;
   font-weight: 300; }
-/* line 482, ../scss/app.scss */
+/* line 481, ../scss/app.scss */
 .item .price {
   text-align: right;
   color: #32aebd; }
-/* line 487, ../scss/app.scss */
+/* line 486, ../scss/app.scss */
 .item .marker {
   text-align: right; }
 
-/* line 492, ../scss/app.scss */
+/* line 491, ../scss/app.scss */
 .collapsed {
   background-color: white;
   color: #293c4e;
   padding: 20px;
   margin-bottom: 60px;
   border-bottom: 5px solid #32aebd; }
-  /* line 499, ../scss/app.scss */
+  /* line 498, ../scss/app.scss */
   .collapsed .buttons {
     position: absolute;
     padding-top: 25px;
     margin-left: -35px; }
-  /* line 505, ../scss/app.scss */
+  /* line 504, ../scss/app.scss */
   .collapsed button {
     font-size: 12px;
     width: 120px;
     padding: 10px 10px; }
+
+/* -----------------------------------------
+   Backend Styles
+----------------------------------------- */
+/* line 517, ../scss/app.scss */
+aside #thumb {
+  width: 100%;
+  z-index: 2; }
+/* line 522, ../scss/app.scss */
+aside #overlay-name {
+  background-color: black;
+  opacity: 0.7;
+  color: white;
+  position: relative;
+  bottom: 30px;
+  padding: 8px;
+  text-align: center;
+  z-index: 3;
+  font-weight: 300;
+  letter-spacing: 1px; }
+/* line 535, ../scss/app.scss */
+aside #logo-dark {
+  width: 70px;
+  padding-top: 30px; }
+
+/* line 541, ../scss/app.scss */
+.tab-bar {
+  border-bottom: 5px solid #32aebd;
+  background-color: #293c4e;
+  height: 50px; }
+  /* line 546, ../scss/app.scss */
+  .tab-bar h1 {
+    font-weight: 200;
+    letter-spacing: 1px;
+    text-transform: uppercase; }
