--- a/html/scss/app.scss
+++ b/html/scss/app.scss
@@ -203,8 +203,7 @@ header {
 	}
 }
 
-
- main {
+main {
 	width:100%;
 }
 
@@ -329,7 +328,7 @@ footer {
 #main-services {
 	h4 {
 		color:$primary-color;
-		font-weight:500;
+		font-weight:300;
 	}
 
 	h3 {
@@ -509,4 +508,44 @@ margin-bottom: 30px;
 	}
 }
 
+/* -----------------------------------------
+   Backend Styles
+----------------------------------------- */
 
+aside {
+
+	#thumb {
+		width: 100%;
+		z-index: 2;
+	}	
+
+	#overlay-name {
+		background-color: black;
+		opacity: 0.7;
+		color: white;
+		position: relative;
+		bottom: 30px;
+		padding: 8px;
+		text-align: center;
+		z-index: 3;
+		font-weight: 300;
+		letter-spacing: 1px;
+	}
+
+	#logo-dark {
+		width: 70px;
+		padding-top: 30px;
+	}
+}
+
+.tab-bar {
+	border-bottom: 5px solid $primary-color;
+	background-color: $secondary-color;
+	height: 50px;
+
+	h1 {
+		font-weight: 200;
+		letter-spacing: 1px;
+		text-transform: uppercase;
+	}
+}
